# django-property-filter

./: .coveragerc  .env_vars  .gitattributes  .gitignore  .pypirc  .readthedocs.yaml  .sonarcloud.properties  .travis.yml  .travis.yml.OLD_BEFORE_GITHUB_ACTIONS  CHANGELOG.md  README.md  benchmarks.csv  docker-compose-postgres-local.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev-testing.txt  requirements-tools-only.txt  requirements.txt  setup.cfg  tmp.txt  tmp2.txt  tox.ini
.github/workflows/: ci_master.yml  codeql-analysis.yml  dependency_review.yml  release_to_test_pypi.yml
Requirements/: requirements-dev-testing.txt  requirements-docs.txt  requirements-release.txt
dev/: check_dev_environment.bat  check_django.bat  check_django.sh  check_package_safety.bat  check_package_safety.sh  check_package_safety_bare.bat  clean_test_proj.bat  create_doc.bat  make_shell_scripts_exec_in_git.bat  profile_PYTHON_PROG.bat  run_linters.bat  run_linters.sh  run_tests.bat  run_tests.sh  run_tests_postgresql_local.bat  run_tests_postgresql_local.sh  run_tests_pygresql_local.bat  run_tests_sqlite.bat  set_postgresql.bat
dev/Benchmark/: benchmarks.csv  profile_benchmarks.bat  run_benchmarks.bat
dev/DevSetup/: GitSetup.bat
dev/Docker/: Dockerfile.python3  docker_build.bat  docker_build.sh  docker_run.bat  docker_run.sh  good_docker_startup.txt
dev/Linting/: RunBandit.bat  RunBandit.sh  RunMyPy.bat  RunMyPy.sh  RunPycodestyle.bat  RunPycodestyle.sh  RunPydocstyle.bat  RunPydocstyle.sh  RunPylint.bat  RunPylint.sh  RunRuff.bat  RunRuff.sh
dev/Linting/# OLD/: RunPydocstyle.sh
dev/Packaging/: check_github_actions_release.sh  check_github_actions_release_test_version.sh  check_travis_release.sh  check_wheels.bat  check_wheels.sh  create_wheel.bat  create_wheel.sh  upload_to_pypi.bat  upload_to_pypi_test.bat
dev/Testing/: RunPytest.bat  RunPytest.sh
django_filter_property/: __init__.py
django_filter_property/logs/: test_log.txt
django_property_filter/: __init__.py  conf.py  constants.py  filters.py  filtersets.py  ruff.toml  utils.py
docs/: docs_PLANNING.TXT
docs/source/: conf.py  index.rst
docs/source/dev/: dev_testing.rst
docs/source/guide/: install.rst  install.txt  limitations.rst  overview.rst  usage.rst
docs/source/ref/: filters.rst  filterset.rst
tests/: common.py  conftest.py  models.py  settings.py  test_common.py  test_utils.py
tests/django_filter_property/: test_project_logger.py
tests/django_filter_property_tests/: test_conf.py
tests/django_property_filter/: test_conf.py  test_filters_generic.py  test_filtersets.py  test_project_logger.py  test_utils.py
tests/django_property_filter/filters/: test_misc_boolean_choice_filters.py  test_multi_filter_tests.py  test_property_all_values_filter.py  test_property_all_values_multiple_filter.py  test_property_base_csv_filter.py  test_property_base_in_filter.py  test_property_base_range_filter.py  test_property_boolean_filter.py  test_property_char_filter.py  test_property_choice_filter.py  test_property_date_filter.py  test_property_date_from_to_range_filter.py  test_property_date_range_filter.py  test_property_date_time_filter.py  test_property_date_time_from_to_range_filter.py  test_property_datetime_filter.py  test_property_durtion_filter.py  test_property_iso_date_time_filter.py  test_property_iso_date_time_from_to_range_filter.py  test_property_lookup_choice_filter.py  test_property_multiple_choice_filter.py  test_property_number_filter.py  test_property_numeric_range_filter.py  test_property_ordering_filter.py  test_property_range_filter.py  test_property_rdate_from_to_range_filter.py  test_property_time_filter.py  test_property_time_range_filter.py  test_property_typed_choice_filter.py  test_property_typed_multiple_choice_filter.py  test_property_uuid_filter.py  test_volume_test.py
tests/django_property_filter_tests/: common.py  test_common.py  test_conf.py
tests/django_property_filter_tests/filters/: test_property_number_filter.py
tests/django_test_proj/: manage.py
tests/django_test_proj/django_test_proj/: asgi.py  settings.py  settings_postgres_github_actions.py  settings_postgres_local.py  settings_postgres_travis.py  urls.py  wsgi.py
tests/django_test_proj/property_filter/: admin.py  apps.py  benchmark_utils.py  filters.py  models.py  views.py
tests/django_test_proj/property_filter/management/commands/: profile_filter.py  run_benchmarks.py  setup_bulk_data.py  setup_data.py
tests/django_test_proj/property_filter/migrations/: 0001_initial.py  0002_delivery_deliveryline_product.py  0003_booleanclass.py  0004_textclass.py  0005_dateclass.py  0006_timeclass.py  0007_durationclass.py  0008_auto_20200615_2048.py  0009_datetimeclass.py  0010_datefromtorangefiltermodel.py  0011_auto_20200624_1945.py  0012_auto_20200624_1948.py  0013_auto_20200624_1949.py  0014_auto_20200624_1952.py  0015_auto_20200624_1954.py  0016_numberfiltermodel.py  0017_auto_20200624_2020.py  0018_timefiltermodel.py  0019_auto_20200624_2033.py  0020_datetimefromtorangefiltermodel.py  0021_auto_20200625_2049.py  0022_isodatetimefromtorangefiltermodel.py  0023_isodatetimefiltermodel.py  0024_uuidfiltermodel.py  0025_choicefiltermodel.py  0026_typedchoicefiltermodel.py  0027_auto_20200704_1152.py  0028_allvaluesfiltermodel.py  0029_daterangefiltermodel.py  0030_modelchoicefiltermodel_modelchoicefilterrelatedmodel.py  0031_multiplechoicefiltermodel.py  0032_allvaluesmultiplefiltermodel.py  0033_typedmultiplechoicefiltermodel.py  0034_lookupchoicefiltermodel.py  0035_basecsvfiltermodel.py  0035_numericrangefiltermodel.py  0036_baseinfiltermodel.py  0037_baserangefiltermodel.py  0038_orderingfiltermodel.py  0039_doubleintmodel.py  (+10 more)
tests/django_test_proj/property_filter/templatetags/: customtags.py
tests/django_test_proj/templates/: base.html  generic_filter.html  generic_filter_filter_first.html  home.html  sidebar.html
tests/filters/: test_property_number_filter.py
tests/tests/: test_common.py  test_django_filter_app.py
