[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "django-property-filter"
authors = [{name = "Eric Ziethen", email = "ericziethen@gmail.com"}]
version = "1.2.0"
license = {text = "MIT"}
description = "Django-Filter extension to support filtering by Properties"
readme = {file = "README.md", content-type = "text/markdown; charset=UTF-8"}

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = ["Django>=4.2", "django-filter>=23.5"]

[project.urls]
Documentation = "https://django-property-filter.readthedocs.io/en/stable/"
Changelog = "https://github.com/ericziethen/django-property-filter/blob/master/CHANGELOG.md"
"Public Issue Reporting" = "https://github.com/ericziethen/django-property-filter-issue-reporting"
"Source Code" = "https://github.com/ericziethen/django-property-filter"

[tool.setuptools]
zip-safe = false
include-package-data = true
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
exclude = ["tests*"]
namespaces = false
