[bdist_wheel]
universal = true

[metadata]
name = django-property-filter
version = 1.1.1
author = Eric Ziethen
author-email = ericziethen@gmail.com
description = Django Filter extension to support filtering by Properties
long-description = file:README.md
long-description-content-type = text/markdown; charset=UTF-8
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules

project_urls =
    Documentation = https://django-property-filter.readthedocs.io/en/stable/
    Changelog = https://github.com/ericziethen/django-property-filter/blob/master/CHANGELOG.md
    Public Issue Reporting = https://github.com/ericziethen/django-property-filter-issue-reporting
    Source Code = https://github.com/ericziethen/django-property-filter

[options]
python_requires = >= 3.6
packages=find:

install_requires =
    Django >= 2.2
    django-filter >= 2.3.0

[options.packages.find]
exclude =
    tests
