[bdist_wheel]
universal = true

[metadata]
name = django-property-filter
version = 1.2.0
author = Eric Ziethen
author_email = ericziethen@gmail.com
description = Django Filter extension to support filtering by Properties
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8
license = MIT
license_files = LICENSE
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries :: Python Modules

project_urls =
    Documentation = https://django-property-filter.readthedocs.io/en/stable/
    Changelog = https://github.com/ericziethen/django-property-filter/blob/master/CHANGELOG.md
    Public Issue Reporting = https://github.com/ericziethen/django-property-filter-issue-reporting
    Source Code = https://github.com/ericziethen/django-property-filter

[options]
python_requires = >= 3.7
packages=find:

install_requires =
    Django >= 3.2
    django-filter >= 2.3.0

[options.packages.find]
exclude =
    tests
