[bdist_wheel]
universal = true

[metadata]
name = django-property-filter
version = 1.2.0
author = Eric Ziethen
author_email = ericziethen@gmail.com
description = Django Filter extension to support filtering by Properties
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8
license = MIT
license_files = LICENSE
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Django
    Framework :: Django :: 4.2
    Framework :: Django :: 5.0
    Framework :: Django :: 5.1
    Framework :: Django-filter :: 23.5
    Framework :: Django-filter :: 24.1
    Framework :: Django-filter :: 24.2
    Framework :: Django-filter :: 24.3
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Software Development :: Libraries :: Python Modules

project_urls =
    Documentation = https://django-property-filter.readthedocs.io/en/stable/
    Changelog = https://github.com/ericziethen/django-property-filter/blob/master/CHANGELOG.md
    Public Issue Reporting = https://github.com/ericziethen/django-property-filter-issue-reporting
    Source Code = https://github.com/ericziethen/django-property-filter

[options]
python_requires = >= 3.8
packages=find:

install_requires =
    Django >= 4.2
    django-filter >= 23.5

[options.packages.find]
exclude =
    tests
